首次提交项目 修改数据库连接参数

--- a/ghost.framework.platform/src/main/resources/application.properties
+++ b/ghost.framework.platform/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #配置数据库
 ghost.framework.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #ghost.framework.datasource.type=com.zaxxer.hikari.HikariDataSource
-ghost.framework.datasource.url=jdbc:mysql://mysql.easy-cloud.online:3306/GHOST-FRAMEWORK?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false&serverTimezone=UTC
+ghost.framework.datasource.url=jdbc:mysql://127.0.0.1:3306/GHOST-FRAMEWORK?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false&serverTimezone=UTC
 ghost.framework.datasource.username=root
-ghost.framework.datasource.password=xbb79824836
+ghost.framework.datasource.password=123456
 ghost.framework.datasource.dataBaseName=GHOST-FRAMEWORK
 ##  Hikari 连接池配置 ------ 详细配置请访问：https://github.com/brettwooldridge/HikariCP
 ## 最小空闲连接数量
