--- a/ghost.framework.web.session.data.jdbc.plugin/src/main/resources/application.properties
+++ b/ghost.framework.web.session.data.jdbc.plugin/src/main/resources/application.properties
@@ -4,7 +4,7 @@ ghost.framework.session.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #ghost.framework.session.datasource.url=jdbc:mysql://mysql.easy-cloud.online:3306/GHOST_SESSION?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false&serverTimezone=UTC
 ghost.framework.session.datasource.url=jdbc:mysql://127.0.0.1:3306/GHOST_SESSION?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false&serverTimezone=UTC
 ghost.framework.session.datasource.username=root
-#ghost.framework.session.datasource.password=xbb79824836
+#ghost.framework.session.datasource.password=123456
 ghost.framework.session.datasource.password=123456
 ghost.framework.session.jdbc.cleanup-cron=0 * * * * *
 #hikari配置
