--- a/ghost.framework.web.session.data.jdbc.plugin/src/main/resources/application.properties
+++ b/ghost.framework.web.session.data.jdbc.plugin/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #数据源配置
 #ghost.framework.session.datasource.type=javax.sql.DataSource
 ghost.framework.session.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#ghost.framework.session.datasource.url=jdbc:mysql://mysql.easy-cloud.online:3306/GHOST_SESSION?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false&serverTimezone=UTC
+#ghost.framework.session.datasource.url=jdbc:mysql://127.0.0.1:3306/GHOST_SESSION?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false&serverTimezone=UTC
 ghost.framework.session.datasource.url=jdbc:mysql://127.0.0.1:3306/GHOST_SESSION?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false&serverTimezone=UTC
 ghost.framework.session.datasource.username=root
 #ghost.framework.session.datasource.password=123456
