--- a/ghost.framework.platform/src/main/resources/application-dev.properties
+++ b/ghost.framework.platform/src/main/resources/application-dev.properties
@@ -1,7 +1,7 @@
 #配置数据库
 ghost.framework.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #ghost.framework.datasource.type=com.zaxxer.hikari.HikariDataSource
-#ghost.framework.datasource.url=jdbc:mysql://mysql.easy-cloud.online:3306/GHOST-FRAMEWORK?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false&serverTimezone=UTC
+#ghost.framework.datasource.url=jdbc:mysql://127.0.0.1:3306/GHOST-FRAMEWORK?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false&serverTimezone=UTC
 ghost.framework.datasource.url=jdbc:mysql://127.0.0.1:3306/GHOST-FRAMEWORK?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true&useSSL=false&serverTimezone=UTC
 ghost.framework.datasource.username=root
 ghost.framework.datasource.password=123456
