--- a/ghost.framework.application.core/src/main/resources/application.properties
+++ b/ghost.framework.application.core/src/main/resources/application.properties
@@ -35,4 +35,4 @@ ghost.framework.datasource.jpa.hibernate.ddl-auto=update
 #2
 #\u914D\u7F6E\u9ED8\u8BA4\u4ED3\u5E93\u5730\u5740\u5217\u8868
 #\u683C\u5F0Fid=maven-public,depend=,user=,password=,file=|value=maven-public,depend=,user=,password=,file=
-#ghost.framework.maven.repository.urls=maven-public,default,,,http://nexus.easy-cloud.online:8081/repository/maven-public/
+#ghost.framework.maven.repository.urls=maven-public,default,,,http://www.xxx.com:8081/repository/maven-public/
